changed title and homepage content
changed title into CookiMate, replaced the original favicon image, changed  homepage content and replaced the original background image with the logo image.

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Made Three</title>
+        <title>CookiMate</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -121,8 +121,8 @@
                                 <div class="hello">
                                     <div class="slid_item">
                                         <div class="home_text ">
-                                            <h1 class="text-yellow">Welcome to Made</h1>
-                                            <h3 class="text-white text-uppercase">We Create a Concept into The Market </h3>
+                                            <h1 class="text-yellow">Welcome to CookiMate</h1>
+                                            <h3 class="text-white text-uppercase">Let's learn how to cook! </h3>
                                         </div>
                                     </div><!-- End off slid item -->
 
