Updated Team & Skill section heading and p tag content

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -273,12 +273,14 @@
                             <div class="col-md-6">
                                 <div class="teams_item">
                                     <div class="head_title">
-                                        <h2 class="text-uppercase">Our <strong>Best Team & Skill</strong></h2>
+                                        <h2 class="text-uppercase">Our <strong>Best Team & Skills</strong></h2>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit donec fringilla iaculis 
-                                        facilisis morbi nulla lectus, luctus interdum eu ultricies tortor maecenas 
-                                        nec massa sit amet erat condimentum porttitorac quis turpis nulla 
-                                        lectus sit amet consectetur.</p>
+                                    <p>At CookiMate, we're more than a development team, we blend creativity, technology, and a love for food.
+                                        <br><br>Every feature in our app is the result of shared ideas, late-night problem-solving, and the drive to create a smarter 
+                                        cooking companion for everyday users. 
+                                        <br><br>Together, we combine design, development, and innovation to shape an app that
+                                        makes cooking smarter, simpler, and a little more fun for everyone...
+                                    </p>
 
 
                                 </div>
