Changed the names of team members

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -282,7 +282,7 @@
                                         makes cooking smarter, simpler, and a little more fun for everyone...
                                     </p>
                                 </div>
-                                
+
                                 <div class="col-md-12">
                                     <div class="skill">
                                         <div class="team_content_details_skills m-top-50">
@@ -321,7 +321,7 @@
                                     <div class="row">
                                         <div class="col-sm-4">
                                             <img src="assets/images/team1.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">John <strong>Doe</strong></h4>
+                                            <h4 class="m-top-20"><strong>Methuka</strong> Fernando</h4>
                                             <h5>Lead Designer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
@@ -332,7 +332,7 @@
                                         </div><!-- End off col-md-4 -->
                                         <div class="col-sm-4">
                                             <img src="assets/images/team2.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">Sarah <strong>Smith</strong></h4>
+                                            <h4 class="m-top-20"><strong>Chalini</strong> Kaushalya</h4>
                                             <h5>UX Designer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
@@ -343,7 +343,7 @@
                                         </div><!-- End off col-md-4 -->
                                         <div class="col-sm-4">
                                             <img src="assets/images/team3.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">Fabian <strong>Doe</strong></h4>
+                                            <h4 class="m-top-20"><strong>Ashani</strong> Hansika</h4>
                                             <h5>Web Engineer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
@@ -354,7 +354,7 @@
                                         </div><!-- End off col-md-4 -->
                                         <div class="col-sm-4">
                                             <img src="assets/images/team2.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">Sarah <strong>Smith</strong></h4>
+                                            <h4 class="m-top-20"><strong>Shashini</strong> Ranasinghe</h4>
                                             <h5>UX Designer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
@@ -365,7 +365,7 @@
                                         </div><!-- End off col-md-4 -->
                                         <div class="col-sm-4">
                                             <img src="assets/images/team2.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">Sarah <strong>Smith</strong></h4>
+                                            <h4 class="m-top-20"><strong>Wenuka</strong> Kithnula</h4>
                                             <h5>UX Designer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
@@ -376,7 +376,7 @@
                                         </div><!-- End off col-md-4 -->
                                         <div class="col-sm-4">
                                             <img src="assets/images/team2.jpg" alt="" class="img-circle" />
-                                            <h4 class="m-top-20">Sarah <strong>Smith</strong></h4>
+                                            <h4 class="m-top-20"><strong>Vishmi</strong> Himasha</h4>
                                             <h5>UX Designer</h5>
                                             <div class="separator"></div>
                                             <ul class="list-inline">
