Updated the skill bars

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -289,25 +289,25 @@
                                             <div class="row">
                                                 <div class="col-sm-6">
                                                     <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="80%">
-                                                        <label>Photoshop</label>
-                                                        <div class="teamskillbar-bar" style="width: 80%;"></div>
+                                                        <label>Web & App development</label>
+                                                        <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
 
                                                     <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="75%">
-                                                        <label>Web Design</label>
-                                                        <div class="teamskillbar-bar" style="width: 75%;"></div>
+                                                        <label>Backend Development</label>
+                                                        <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
                                                 </div>
 
                                                 <div class="col-sm-6">
-                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="90%">
-                                                        <label>DEvelopment</label>
-                                                        <div class="teamskillbar-bar" style="width: 90%;"></div>
+                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="70%">
+                                                        <label>Database Management</label>
+                                                        <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
 
-                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="98%">
-                                                        <label>Branding</label>
-                                                        <div class="teamskillbar-bar" style="width: 98%;"></div>
+                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="80%">
+                                                        <label>Team Collaboration</label>
+                                                        <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
                                                 </div>
 
