Changed skill bar colors & labels

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -294,14 +294,14 @@
                                                     </div> <!-- End Skill Bar -->
 
                                                     <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="75%">
-                                                        <label>Backend Development</label>
+                                                        <label>UI/UX Design</label>
                                                         <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
                                                 </div>
 
                                                 <div class="col-sm-6">
-                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="70%">
-                                                        <label>Database Management</label>
+                                                    <div class="teamskillbar clearfix m-top-50 text-uppercase" data-percent="60%">
+                                                        <label>Backend Development</label>
                                                         <div class="teamskillbar-bar" style="width: 10%;"></div>
                                                     </div> <!-- End Skill Bar -->
 
