Changed the mission statement in the big yellow part

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -152,7 +152,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="main_about text-center">
-                                <h1 class="text-black">Made is design studio based on London </h1>
+                                <h1 class="text-black">To make cooking simple, fun and and stress-free for university studets, helping them enjoy tasty meals without the hassel. </h1>
                                 <h2 class="text-white">- & -</h2>
                                 <h3 class="text-black text-uppercase">We love to design a website and the other awesome graphic</h3>
 
