made changes in the about section and the our featured section

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -147,14 +147,14 @@
 
 
             <!--About Section-->
-            <section id="about" class="about bg-yellow roomy-80">
+            <section id="about" class="about mission roomy-80">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="main_about text-center">
-                                <h1 class="text-black">To make cooking simple, fun and and stress-free for university studets, helping them enjoy tasty meals without the hassel. </h1>
+                                <h1 class="text-mission">To make cooking simple, fun and and stress-free for university studets, helping them enjoy tasty meals without the hassel. </h1>
                                 <h2 class="text-white">- & -</h2>
-                                <h3 class="text-black text-uppercase">We love to design a website and the other awesome graphic</h3>
+                                <h3 class="text-black text-uppercase">To make cooking effortless and enjoyable for every university student.</h3>
 
                                 <a href="" class="btn btn-primary m-top-100">Get In Touch</a>
                             </div>
@@ -177,9 +177,7 @@
                                         <h2 class="text-uppercase">Our <strong>Featured</strong></h2>
                                     </div>
                                     <div class="featured_content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit donec fringilla iaculis facilisis 
-                                            morbi nulla lectus, luctus interdum eu ultricies ac tortor maecenas nec massa sit 
-                                            amet erat condimentum porttitor ac quis turpis.</p>
+                                        <p>Explore our featured collection of recipes and AI-generated meal ideas, carefully selected to inspire your cooking. From quick student-friendly meals to delicious, creative dishes, these highlights are designed to make cooking enjoyable, stress-free, and full of flavor.</p>
 
                                         <a href="" class="btn btn-default m-top-40">Read More</a>
                                     </div>
@@ -194,7 +192,7 @@
                                         <div class="col-xs-6">
                                             <div class="features_item_text">
                                                 <img src="assets/images/featured1.jpg" alt="" class="img-circle" />
-                                                <p class="m-top-20">Trending Design</p>
+                                                <p class="m-top-20">Engaging layout</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
@@ -206,13 +204,13 @@
                                         <div class="col-xs-6">
                                             <div class="features_item_text m-top-50">
                                                 <img src="assets/images/featured3.jpg" alt="" class="img-circle" />
-                                                <p class="m-top-20">Responsive Design</p>
+                                                <p class="m-top-20">Interactive AI</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="features_item_text m-top-50">
                                                 <img src="assets/images/featured4.jpg" alt="" class="img-circle" />
-                                                <p class="m-top-20">Free Google Font</p>
+                                                <p class="m-top-20">Personalized experience</p>
                                             </div>
                                         </div>
 
