changed the about section into the mission and vision section.  Added a background video to the section and changed text colors

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -146,15 +146,20 @@
 
 
 
-            <!--About Section-->
+            <!--Mission and vision Section-->
             <section id="about" class="about mission roomy-80">
+                <video autoplay muted loop playsinline class="bg-video">
+                <source src="assets/videos/cooking.mp4" type="video/mp4">
+        
+                </video>
+
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="main_about text-center">
                                 <h1 class="text-mission">To make cooking simple, fun and and stress-free for university studets, helping them enjoy tasty meals without the hassel. </h1>
-                                <h2 class="text-white">- & -</h2>
-                                <h3 class="text-black text-uppercase">To make cooking effortless and enjoyable for every university student.</h3>
+                                <h2 class="text-and">- & -</h2>
+                                <h3 class="text-vision text-uppercase">To make cooking effortless and enjoyable for every university student.</h3>
 
                                 <a href="" class="btn btn-primary m-top-100">Get In Touch</a>
                             </div>
