made changes to the four images in the featured section

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -196,7 +196,7 @@
                                         <div class="divider_vertical"></div>
                                         <div class="col-xs-6">
                                             <div class="features_item_text">
-                                                <img src="assets/images/featured1.jpg" alt="" class="img-circle" />
+                                                <img src="assets/images/featured1.jpg" alt="" class="featured-image" />
                                                 <p class="m-top-20">Engaging layout</p>
                                             </div>
                                         </div>
