made changes to the images in the featured section

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -202,20 +202,20 @@
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="features_item_text">
-                                                <img src="assets/images/featured2.jpg" alt="" class="img-circle" />
-                                                <p class="m-top-20">Easy to Customize</p>
+                                                <img src="assets/images/featured2.jpg" alt="" class="featured-image" />
+                                                <p class="m-top-20">Personalized experience</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="features_item_text m-top-50">
-                                                <img src="assets/images/featured3.jpg" alt="" class="img-circle" />
+                                                <img src="assets/images/featured3.jpg" alt="" class="featured-image2" />
                                                 <p class="m-top-20">Interactive AI</p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="features_item_text m-top-50">
-                                                <img src="assets/images/featured4.jpg" alt="" class="img-circle" />
-                                                <p class="m-top-20">Personalized experience</p>
+                                                <img src="assets/images/featured4.jpg" alt="" class="featured-image2" />
+                                                <p class="m-top-20">Easy to customize</p>
                                             </div>
                                         </div>
 
