--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -388,19 +388,23 @@
                                         <h2 class="text-uppercase">Why <strong>Choose Us</strong></h2>
                                     </div>
                                     <div class="choose_item_text fix">
-                                        <h6><i class="fa fa-check-square-o"></i> Easy to costumize.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i> Great for students and anyone learning to cook.</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i> Full of features.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i>   saves time and money.</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i> 24/7 Support.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i> motivates you to stay consistent</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i> All in psd files.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i> community support .</h6>
+                                        <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
+                                    </div>
+                                     <div class="choose_item_text fix m-top-20">
+                                        <h6><i class="fa fa-check-square-o"></i>  reliable guidance you can trust .</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                 </div>
