added photos under why contact us

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -471,13 +471,16 @@
                 <div class="choose_mac">
                   <div class="choose_slide">
                     <div class="choose_item">
-                      <img src="assets/images/choose-img1.png" alt="" />
+                      <img src="assets/images/community.png" alt="community_page" />
                     </div>
                     <div class="choose_item">
-                      <img src="assets/images/choose-img1.png" alt="" />
+                      <img src="assets/images/save -ime-and-money.png" alt="save -ime-and-money_page" />
                     </div>
                     <div class="choose_item">
-                      <img src="assets/images/choose-img1.png" alt="" />
+                      <img src="assets/images/students-cooking.jpg" alt="students-cooking_page" />
+                    </div>
+                      <div class="choose_item">
+                      <img src="assets/images/gamified.jpg" alt="gamified_page" />
                     </div>
                   </div>
                 </div>
