Changed the first heading of why choose us

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -426,7 +426,7 @@
                                         <h2 class="text-uppercase">Why <strong>Choose Us</strong></h2>
                                     </div>
                                     <div class="choose_item_text fix">
-                                        <h6><i class="fa fa-check-square-o"></i> Easy to costumize.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i>Perfect for busy students.</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
