Changed the second heading under why choose us

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -430,7 +430,7 @@
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i> Full of features.</h6>
+                                        <h6><i class="fa fa-check-square-o"></i>Community Support.</h6>
                                         <p>Atque ducimus velit, earum quidem, iusto dolorem. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
