Changed the css of my choose slide class under why choose us section & added pictures

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -408,13 +408,16 @@
                                 <div class="choose_mac">
                                     <div class="choose_slide">
                                         <div class="choose_item">
-                                            <img src="assets/images/choose-img1.png" alt="" />
+                                            <img src="assets/images/students-cooking.jpg" alt="students-cooking" />
                                         </div>
                                         <div class="choose_item">
-                                            <img src="assets/images/choose-img1.png" alt="" />
+                                            <img src="assets/images/community.png" alt="community" />
                                         </div>
                                         <div class="choose_item">
-                                            <img src="assets/images/choose-img1.png" alt="" />
+                                            <img src="assets/images/save -ime-and-money.png" alt="save-time-and-money" />
+                                        </div>
+                                        <div class="choose_item">
+                                            <img src="assets/images/gamified.jpg" alt="gamified" />
                                         </div>
                                     </div>
                                 </div>
