Made adjustments to the content under why choose us

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -430,19 +430,19 @@
                                     </div>
                                     <div class="choose_item_text fix">
                                         <h6><i class="fa fa-check-square-o"></i>Perfect for busy students.</h6>
-                                        <p> cookimate offers simple, practical guidance that fits into any lifestyle, whether you're managing classes or just starting your cooking journey . </p>
+                                        <p>Cookimate offers simple, practical guidance that fits into any lifestyle, whether you're managing classes or just starting your cooking journey . </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
                                         <h6><i class="fa fa-check-square-o"></i>Community Support.</h6>
-                                        <p>you're never cooking alone. get inspiration, encouragement and practical tips from our food community . </p>
+                                        <p>You're never cooking alone. Get inspiration, encouragement and practical tips from our food community . </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i>  saves time and money.</h6>
-                                        <p>quick recipes, smart suggestions and efficient planning help you avoid food waste and unnecessary spending. </p>
+                                        <h6><i class="fa fa-check-square-o"></i>Saves time and money.</h6>
+                                        <p>Quick recipes, smart suggestions and efficient planning help you avoid food waste and unnecessary spending. </p>
                                     </div>
                                     <div class="choose_item_text fix m-top-20">
-                                        <h6><i class="fa fa-check-square-o"></i> motivates you to stay consistent.</h6>
-                                        <p>gamified elements like points and achievements help you stay engaged and build healthy habits. </p>
+                                        <h6><i class="fa fa-check-square-o"></i>Motivates you to stay consistent.</h6>
+                                        <p>Gamified elements like points and achievements help you stay engaged and build healthy habits. </p>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6 -->
