changed images card color and paragraph
Added images ,changed the top strip of the card color changed Our Service paragraph

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -225,44 +225,87 @@
             </section><!-- End off Featured Section-->
 
 
-            <!--Business Section-->
+             <!--Business Section-->
             <section id="service" class="service bg-grey roomy-70">
                 <div class="container">
                     <div class="row">
                         <div class="main_service">
                             <div class="col-md-6">
                                 <div class="service_slid">
-                                    <div class="slid_shap bg-yellow"></div>
+                                    <div class="slid_shap" style="background-color: #d49436;"></div>
+
                                     <div class="service_slid_item text-center">
+
+                                        <!-- AI Mascot -->
                                         <div class="service_slid_text">
-                                            <span class="icon icon icon-tools text-black"></span>
-                                            <h5 class="text-black m-top-20">UI/UX Design</h5>
+                                            <img src="ai-mascot.jpg"
+                                                alt="AI Mascot"
+                                                style="width:100%; max-width:260px; height:230px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20"> Ineractive AI Mascot</h5>
                                         </div>
+
+                                        <!-- Meal Planner -->
                                         <div class="service_slid_text">
-                                            <span class="icon icon icon-sports-2 text-black"></span>
-                                            <h5 class="text-black m-top-20">UI/UX Design</h5>
+                                            <img src="mealplanner.jpg"
+                                                alt="Meal Planner"
+                                                style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20">Meal Planner</h5>
                                         </div>
+
+                                        <!-- Unit Converter -->
+                                        <div class="service_slid_text">
+                                            <img src="unit-converter.jpg"
+                                                alt="Unit Converter"
+                                                style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20">Unit Converter</h5>
+                                        </div>
+
+                                        <!-- Community -->
+                                        <div class="service_slid_text">
+                                            <img src="community.jpg"
+                                                alt="Community"
+                                                style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20">Community</h5>
+                                        </div>
+
+                                        <!-- In-built Recipes -->
+                                        <div class="service_slid_text">
+                                            <img src="inbuilt-recipies.jpg"
+                                                alt="In-built Recipes"
+                                                style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20">In-built Recipies</h5>
+                                        </div>
+                                        <!-- Gamification -->
+                                        <div class="service_slid_text">
+                                            <img src="point.jpg"
+                                                alt= "Points"
+                                                style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
+                                            <h5 class="text-black m-top-20">Cooking milestones</h5>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-md-5 col-md-offset-1">
                                 <div class="service_item sm-m-top-50">
                                     <div class="head_title">
                                         <h2 class="text-uppercase">Our <strong>Service</strong></h2>
                                     </div>
                                     <div class="service_content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit donec fringilla iaculis facilisis 
-                                            morbi nulla lectus, luctus interdum eu ultricies ac tortor maecenas nec massa sit 
-                                            amet erat condimentum porttitor ac quis turpis.</p>
-
+                                        <p>CookiMate is a smart social cooking assistant that combines AI guidance, voice interaction, and a friendly mascot to make cooking easier and more enjoyable for beginners. From step-by-step help in the kitchen to a supportive community and health-conscious tools, CookiMate brings everything you need into one simple experience.</p>
+                                        
                                         <a href="" class="btn btn-default m-top-40">Read More</a>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
-            </section><!-- End off Business section -->
+            </section>
+            <!-- End off Business section -->
+
 
 
             <!--Team And Skill Section-->
