Fixed image links under our services

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -241,7 +241,7 @@
 
                                         <!-- AI Mascot -->
                                         <div class="service_slid_text">
-                                            <img src="ai-mascot.jpg"
+                                            <img src="assets/images/ai-mascot.jpg"
                                                 alt="AI Mascot"
                                                 style="width:100%; max-width:260px; height:230px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20"> Ineractive AI Mascot</h5>
@@ -249,7 +249,7 @@
 
                                         <!-- Meal Planner -->
                                         <div class="service_slid_text">
-                                            <img src="mealplanner.jpg"
+                                            <img src="assets/images/mealplanner.jpg"
                                                 alt="Meal Planner"
                                                 style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20">Meal Planner</h5>
@@ -257,7 +257,7 @@
 
                                         <!-- Unit Converter -->
                                         <div class="service_slid_text">
-                                            <img src="unit-converter.jpg"
+                                            <img src="assets/images/unit-converter.jpg"
                                                 alt="Unit Converter"
                                                 style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20">Unit Converter</h5>
@@ -265,7 +265,7 @@
 
                                         <!-- Community -->
                                         <div class="service_slid_text">
-                                            <img src="community.jpg"
+                                            <img src="assets/images/community.jpg"
                                                 alt="Community"
                                                 style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20">Community</h5>
@@ -273,14 +273,14 @@
 
                                         <!-- In-built Recipes -->
                                         <div class="service_slid_text">
-                                            <img src="inbuilt-recipies.jpg"
+                                            <img src="assets/images/inbuilt-recipies.jpg"
                                                 alt="In-built Recipes"
                                                 style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20">In-built Recipies</h5>
                                         </div>
                                         <!-- Gamification -->
                                         <div class="service_slid_text">
-                                            <img src="point.jpg"
+                                            <img src="assets/images/point.jpg"
                                                 alt= "Points"
                                                 style="width:100%; max-width:220px; height:200px; object-fit:cover; display:block; margin:0 auto; border-radius:8px;" />
                                             <h5 class="text-black m-top-20">Cooking milestones</h5>
